# final_project_Eat2153

./: CONTRIBUTING.rst  GeoCenPyWriteUp.ipynb  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: geocenpy.rst  modules.rst
geocenpy/: geocenpy.py
tests/: test_geocenpy.py
