[tool.poetry]
name = "geocenpy"
version = "0.1.4"
description = """A package to help users better utilize Census GeoJSON files."""
authors = ["Elliott <eat2153@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
pyproj = "^3.0.0"
requests = "^2.25.1"
numpy = "^1.19.4"
shapely = "^1.7.1"
geopandas = "^0.8.1"
matplotlib = "^3.3.3"
descartes = "^1.1.0"
lxml = "^4.6.2"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
