[tool.poetry]
name = "geocenpy"
version = "0.1.4"
description = """A package to help users better utilize Census GeoJSON files."""
authors = ["Elliott <eat2153@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
geopandas = "*"
pandas = "*"
requests = "*"
matplotlib = "*"
lxml = "*"
descartes = "*"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"


[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
